<resources>
    <string name="app_name">GymApp</string>
    <string name="title_activity_moje_treningy">MojeTreningy</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_trening">Trening</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="fullbody">Fullbody</string>
    <string name="zadaj_nazov_treningu">Zadaj nazov treningu</string>
    <string name="dailytraining">DailyTraining</string>
    <string name="my_stats">My stats</string>
    <string name="my_training">My training</string>
    <string name="textview">TextView</string>
    <string name="edit">Edit</string>
    <string name="WarningMeno">Meno sa už používa.</string>
    <string name="sendTreningToCvik">sendTreningToCvik</string>
    <string name="po_et_s_ri">Počet sérií:</string>
    <string name="po_et_opakovan">Počet opakovaní:</string>
    <string name="prest_vka">Prestávka:</string>
    <string name="_0">0</string>
    <string name="nebol_pridan_iaden_popis">Nebol pridaný žiaden popis.</string>
    <string name="_0_sec">0 sec</string>
    <string name="n_zov">Názov</string>
    <string name="add">add</string>
    <string name="vek">Vek</string>
    <string name="hmotnost">Hmotnost</string>
    <string name="priezvisko">Priezvisko</string>
    <string name="meno">Meno</string>
    <string name="osobn_popis">Osobný popis</string>
    <string name="_0_kg">0 kg</string>
    <string name="cielov_hmotnos">Cielová hmotnosť</string>
    <string name="pop_ako_spr_vne_cvi_i_zadan_trening">Popíš ako správne cvičiť zadaný trening</string>
    <string name="zadaj_n_zov">Zadaj názov</string>
    <string name="add_exercise">Add exercise</string>
    <string name="nezadanyText">Nič si nezadal</string>
    <string name="zadajHmotnostCiel">Zadaj hmotnosť ktorú chceš dosiahnuť.</string>
    <string name="zadajHmotnost">Zadaj svoju aktuálnu váhu.</string>
    <string name="zadajVek">Zadaj svoj vek.</string>
    <string name="zadajPriezvisko">Zadaj nové priezvisko</string>
    <string name="zadajMeno">Zadaj nové meno</string>
    <string name="nemusiBytPrave">Nemusí odpovedať skutočnosti.</string>
    <string name="jednotkyKila">Jednotky sú v kilách.</string>
    <string name="menoExistuje">Meno sa už používa.</string>
    <string name="zadajOpakovania">Musíš zadať počet opakovaní</string>
    <string name="zadajSerie">Musíš zadať počet sérií</string>
    <string name="menoUnikat">Musí byť unikátne</string>
    <string name="zadajNazovCviku">Zadaj nový názov cviku</string>
    <string name="zadajNazovTreningu">Zadaj meno treningu</string>
    <string name="nezadalNazov">Nezadal si názov</string>
    <string name="nezadalPrestavku">Musíš zadať čas prestávky</string>
    <string name="setDaily">Trening bol nastavený ako denný.</string>
    <string name="casCvicit">Čas znova cvičiť</string>
    <string name="exit_training">Exit training</string>
    <string name="pokracuj">Continue</string>
    <string name="set_training">Set training</string>
    <string name="start">Start</string>
    <string name="show_training">Show training</string>
    <string name="prazdneTreningy">Niektoré tréningy sú prázdne. Chceš to napraviť ?</string>
</resources>
