<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OsProfilZobraz"
    android:background="@color/cierna">


    <TextView
        android:id="@+id/vek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/vek"
        android:textColor="@color/svetloZelena"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPriezisko" />

    <TextView
        android:id="@+id/vaha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/hmotnost"
        android:textColor="@color/svetloZelena"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/vek"
        app:layout_constraintTop_toBottomOf="@+id/vek" />

    <TextView
        android:id="@+id/cielHmotnost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/cielov_hmotnos"
        android:textColor="@color/svetloZelena"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/vaha"
        app:layout_constraintTop_toBottomOf="@+id/vaha" />

    <EditText
        android:id="@+id/os_citat"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/zaobleniesvetle"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ou_popis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/osobn_popis"
        android:textColor="@color/tmavoZelena"
        app:layout_constraintBottom_toTopOf="@+id/os_citat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cielHmotnost" />

    <Button
        android:id="@+id/buttonMeno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/cierna"
        android:text="@string/meno"
        android:textColor="@color/tmavoZelena"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPriezisko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priezvisko"
        android:textSize="30sp"
        android:background="@color/cierna"
        android:textColor="@color/tmavoZelena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMeno" />

    <Button
        android:id="@+id/buttonVek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:layout_marginTop="20dp"
        android:background="@color/cierna"
        android:text="@string/_0"
        android:textColor="@color/tmavoZelena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPriezisko" />

    <Button
        android:id="@+id/buttonHmot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:background="@color/cierna"
        android:text="@string/_0"
        android:textColor="@color/tmavoZelena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonVek" />

    <Button
        android:id="@+id/buttonCiel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:background="@color/cierna"
        android:text="@string/_0_kg"
        android:textColor="@color/tmavoZelena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHmot" />

</androidx.constraintlayout.widget.ConstraintLayout>