<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PridajCvik"
    android:background="@color/cierna">


    <TextView
        android:id="@+id/popisCvik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/pop_ako_spr_vne_cvi_i_zadan_trening"
        android:textSize="14sp"
        android:textColor="@color/svetloZelena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/casCvikov2" />

    <EditText
        android:id="@+id/dajPocetSerii"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/cierna"
        android:background="@drawable/zaobleniesvetle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNameCvik" />

    <EditText
        android:id="@+id/dajPrestavku"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/cierna"
        android:background="@drawable/zaobleniesvetle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNameCvik" />

    <EditText
        android:id="@+id/dajPocetOpak"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/cierna"
        android:background="@drawable/zaobleniesvetle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNameCvik" />

    <TextView
        android:id="@+id/casCvikov2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/prest_vka"
        android:textSize="25sp"
        android:textColor="@color/svetloZelena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opakovanieCvikov2" />

    <TextView
        android:id="@+id/opakovanieCvikov2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/po_et_opakovan"
        android:textSize="25sp"
        android:textColor="@color/svetloZelena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serieCvikov2" />

    <TextView
        android:id="@+id/serieCvikov2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/po_et_s_ri"
        android:textSize="25sp"
        android:textColor="@color/svetloZelena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNameCvik" />

    <EditText
        android:id="@+id/editNameCvik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/zadaj_n_zov"
        android:textColor="@color/tmavoZelena"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/getPopis"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/zaobleniesvetle"
        android:textColor="@color/cierna"
        app:layout_constraintTop_toBottomOf="@+id/popisCvik" />

    <Button
        android:id="@+id/deleteCvik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delete"
        android:background="@drawable/zaoblenie"
        android:textColor="@color/cierna"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveCvik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        android:background="@drawable/zaoblenie"
        android:textColor="@color/cierna"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>